--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "express": "^5.1.0",
     "joi": "^17.13.3",
     "mongodb": "^6.17.0",
-    "mongoose": "^8.15.1"
+    "mongoose": "^8.15.1",
+    "normalize-mongoose": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
